# onceonly-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: release.yml
examples/: README.md  ai_agent_guard.py  basic_check_lock.py  decorator_async.py  decorator_sync.py  usage_and_me.py  with_metadata.py  with_ttl.py
examples/ai/: agent_action_local.py  agent_full_flow_no_onceonly.py  agent_full_flow_onceonly.py  agent_guard_manual.py  agent_retry_safe.py  budget_limits.py  get_result.py  governance.py  langchain_tool.py  langchain_tool_ai_lease.py  long_running_job.py  poll_status.py  run_and_wait.py  tool_permissions.py
examples/general/: basic_check_lock.py  decorator_async.py  decorator_pydantic.py  decorator_sync.py  usage_stats.py  with_metadata.py  with_ttl.py
onceonly/: __init__.py  _http.py  _util.py  ai.py  ai_models.py  client.py  decorators.py  exceptions.py  governance.py  models.py
onceonly/integrations/: __init__.py  langchain.py
scripts/: check_release.py
tests/: test_ai_lease.py  test_ai_run_and_wait.py  test_check_lock.py  test_client_behavior.py  test_governance.py  test_idempotent_ai_decorator.py  test_integration_smoke.py  test_integrations.py  test_parsing.py  test_tools_registry.py
