[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onceonly"
version = "1.0.0"
description = "Python SDK for OnceOnly idempotency API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{name = "OnceOnly", email = "support@onceonly.tech"}]
dependencies = ["httpx>=0.25"]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.urls]
Homepage = "https://onceonly.tech/"
Documentation = "https://onceonly.tech/docs/"
Repository = "https://github.com/YOUR_GITHUB/onceonly-python"

[tool.pytest.ini_options]
testpaths = ["tests"]
