[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onceonly-sdk"
version = "3.0.2"
description = "Python SDK for OnceOnly idempotency API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "OnceOnly", email = "support@onceonly.tech" }]

dependencies = [
  "httpx>=0.25",
]

keywords = ["idempotency", "automation", "zapier", "make", "ai-agents"]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://onceonly.tech/"
Documentation = "https://docs.onceonly.tech"
Repository = "https://github.com/OnceOnly-Tech/onceonly-python"

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-asyncio>=0.23", "anyio>=4.0"]
langchain = ["langchain-core>=0.1.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "integration: live API smoke tests (requires TEST_API_KEY)"
]
